rename idx field to logIndex
